2010-04-22  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added missing #ifdef HAVE_PORT_ASSOCIATE
	* src/DownloadEngineFactory.cc

2010-04-21  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added opensolaris port_associate() support.
	* src/DownloadEngineFactory.cc
	* src/Makefile.am
	* src/OptionHandlerFactory.cc
	* src/PortEventPoll.cc
	* src/PortEventPoll.h
	* src/SocketCore.cc
	* src/SocketCore.h
	* src/configure.ac
	* src/main.cc
	* src/prefs.cc
	* src/prefs.h

2010-04-21  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed the bug that _e is passed where e should be passed.
	* src/HttpListenCommand.cc

2010-04-20  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Increased _epEvents size if necessary.
	* src/EpollEventPoll.cc
	* src/EpollEventPoll.h

2010-04-20  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Removed EventRType template parameter
	* src/EpollEventPoll.cc
	* src/EpollEventPoll.h
	* src/Event.h
	* src/PollEventPoll.cc
	* src/PollEventPoll.h

2010-04-20  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Use Event in EpollEventPoll
	* src/EpollEventPoll.cc
	* src/EpollEventPoll.h

2010-04-20  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Externalized Event, CommandEvent, ADNSEvent, SocketEntry and
	AsyncNameResolverEntry class.
	* src/Event.h
	* src/Makefile.am
	* src/PollEventPoll.cc
	* src/PollEventPoll.h

2010-04-19  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Supported poll() for socket event notification.  --event-poll can
	take value "poll". Fixed the bug that timeout for
	SocketCore::isReadable()/isWritable() is ignored when epoll is
	used.
	* src/OptionHandlerFactory.cc
	* src/a2io.h
	* src/prefs.h
	* src/SocketCore.h
	* src/Makefile.am
	* src/main.cc
	* src/PollEventPoll.h
	* src/SocketCore.cc
	* src/DownloadEngineFactory.cc
	* src/PollEventPoll.cc
	* src/prefs.cc
	* configure.ac

2010-04-19  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
